Added link to GitHub repo

--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -1,2 +1,15 @@
 @import "./theme";
 @import "../../dist/style.scss";
+
+.welcome-jumbotron {
+    background-image: linear-gradient(transparent 60%, rgba(0,0,0,.05) 100%);
+
+    .display-1 {
+        font-family: "Work Sans", sans-serif;
+        font-weight: "600";
+    }
+}
+
+.bi {
+    @extend .mb-1;
+}
