--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -1,6 +1,8 @@
 @import "./theme";
 @import "../../dist/style.scss";
 
+@import "~highlight.js/styles/github.css";
+
 .welcome-jumbotron {
     background-image: linear-gradient(transparent 60%, rgba(0,0,0,.05) 100%);
 
