--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -36,3 +36,13 @@
         @extend .display-4;
     }
 }
+
+.docs-min-height-100vh {
+    min-height: calc(100vh - 0.625rem);
+}
+
+.docs-footer {
+    a {
+        color: $body-color;
+    }
+}
