#70 Add BsPopover and more

--- a/src/docs/_theme.scss
+++ b/src/docs/_theme.scss
@@ -75,3 +75,4 @@ $toast-border-color: rgba(white, .1);
 $toast-header-color: $gray-400;
 $toast-header-background-color: rgba($black, .85);
 $toast-header-border-color: rgba(white, .05);
+$popover-bg: $gray-500;
