Improvements for Safari 15

--- a/src/docs/_theme.scss
+++ b/src/docs/_theme.scss
@@ -54,7 +54,7 @@ $list-group-hover-bg: $gray-800;
 $list-group-border-color: rgba($white, .125);
 $modal-header-border-color: $gray-700;
 $modal-content-bg: $gray-800;
-$theme: rgb(38, 31, 49);
+$theme: #261f31;
 $red: #ec808a;
 $yellow: #ffe185;
 $cyan: #72daea;
