--- a/src/docs/_theme.scss
+++ b/src/docs/_theme.scss
@@ -24,13 +24,14 @@ $input-border-color: $gray-600;
 $input-group-addon-bg: $gray-700;
 $nav-tabs-link-active-color: $gray-300;
 $nav-tabs-border-color: $gray-700;
-$nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent;
+$nav-tabs-link-active-border-color: $nav-tabs-border-color
+    $nav-tabs-border-color transparent;
 $nav-tabs-link-hover-border-color: $gray-800 $gray-800 transparent;
-$navbar-light-color: rgba($white, .5);
-$navbar-light-hover-color: rgba($white, .7);
-$navbar-light-active-color: rgba($white, .9);
-$navbar-light-disabled-color: rgba($white, .3);
-$navbar-light-toggler-border-color: rgba($white, .1);
+$navbar-light-color: rgba($white, 0.5);
+$navbar-light-hover-color: rgba($white, 0.7);
+$navbar-light-active-color: rgba($white, 0.9);
+$navbar-light-disabled-color: rgba($white, 0.3);
+$navbar-light-toggler-border-color: rgba($white, 0.1);
 $pagination-bg: $body-bg;
 $pagination-border-color: $gray-700;
 $pagination-hover-bg: $gray-800;
@@ -40,8 +41,8 @@ $pagination-disabled-bg: $body-bg;
 $pagination-disabled-color: $gray-400;
 $jumbotron-bg: $gray-600;
 $card-bg: $body-bg;
-$card-cap-bg: rgba($white, .03);
-$card-border-color: rgba($white, .125);
+$card-cap-bg: rgba($white, 0.03);
+$card-border-color: rgba($white, 0.125);
 $primary: rgb(140, 130, 172);
 $link-color: lighten($primary, 25%);
 $link-hover-color: lighten($link-color, 15%);
@@ -51,7 +52,7 @@ $close-text-shadow: 0 1px 0 $black;
 $list-group-action-active-bg: $gray-500;
 $list-group-action-color: $gray-200;
 $list-group-hover-bg: $gray-800;
-$list-group-border-color: rgba($white, .125);
+$list-group-border-color: rgba($white, 0.125);
 $modal-header-border-color: $gray-700;
 $modal-content-bg: $gray-800;
 $theme: #261f31;
@@ -70,9 +71,9 @@ $nav-tabs-link-active-bg: $body-bg;
 $component-active-color: $black;
 $list-group-bg: $body-bg;
 $btn-close-color: $white;
-$toast-background-color: rgba($black, .85);
-$toast-border-color: rgba(white, .1);
+$toast-background-color: rgba($black, 0.85);
+$toast-border-color: rgba(white, 0.1);
 $toast-header-color: $gray-400;
-$toast-header-background-color: rgba($black, .85);
-$toast-header-border-color: rgba(white, .05);
+$toast-header-background-color: rgba($black, 0.85);
+$toast-header-border-color: rgba(white, 0.05);
 $popover-bg: $gray-500;
