Rounded Body component

--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -40,7 +40,7 @@ $primary: rgb(140, 130, 172);
 }
 
 .docs-min-height-100vh {
-    min-height: calc(100vh - 0.625rem);
+    min-height: 100vh;
 }
 
 pre {
