--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -1,6 +1,7 @@
 // @import "./theme";
 $theme: rgb(38, 31, 49);
 $primary: rgb(140, 130, 172);
+$sidebar-indicator-color: $primary;
 @import "../../dist/style.scss";
 
 .welcome-jumbotron {
