Brought Web Component blue-sidebar to docs

--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -48,3 +48,9 @@ pre {
     display: inline-block;
     vertical-align: -0.125em;
 }
+
+.docs-blog-content {
+    padding: 0 calc(50% - 24rem);
+}
+
+@import "./docs-use-web-components.scss";
