--- a/src/docs/web-components.scss
+++ b/src/docs/web-components.scss
@@ -1,64 +1,65 @@
-.docs-web-components {
+.blue-wc-web-components {
     // Collides with Blue React's --blue-sidebar-width, that's why we need to reset it here to
     // Web Component's default value
     --blue-sidebar-width: 16.563rem;
 
-    --blue-sidebar-bg: rgba(35, 31, 49, 1);
+    --blue-sidebar-bg: var(--blue-theme, #007bff);
     --blue-sidebar-button-bg: transparent;
-    --blue-sidebar-button-bg-hover: rgba(255, 255, 255, 0.5);
+    --blue-sidebar-button-bg-hover: hsla(
+        var(--blue-sidebar-color-h, 0),
+        var(--blue-sidebar-color-s, 100%),
+        var(--blue-sidebar-color-l, 100%),
+        0.5
+    );
     --blue-sidebar-button-border-radius: 0.5rem;
     --blue-sidebar-button-margin: 0.25rem;
     --blue-sidebar-button-transition: background 0.2s;
     --blue-control-size: calc(3rem - var(--blue-sidebar-button-margin) * 2);
     --blue-sidebar-width-closed: calc(var(--blue-control-size) + var(--blue-sidebar-button-margin) * 2);
     --blue-sidebar-transition: width 0.5s ease-in-out;
-}
-
-.docs-layout {
     display: flex;
 }
 
-.docs-web-components .router-page {
+.blue-wc-web-components .router-page {
     position: initial;
     width: initial;
-    height: initial;
     flex-grow: 1;
 }
 
-.docs-web-components .blue-page {
+.blue-wc-web-components .blue-page {
     margin-left: 0 !important;
 }
 
-.docs-web-components blue-sidebar .blue-menu-item {
-    color: white;
+.blue-wc-web-components blue-sidebar .blue-menu-item {
+    color: hsl(var(--blue-sidebar-color-h, 0), var(--blue-sidebar-color-s, 100%), var(--blue-sidebar-color-l, 100%));
 }
 
-.docs-web-components blue-sidebar:not([closed]) .blue-menu-item {
+.blue-wc-web-components blue-sidebar:not([closed]) .blue-menu-item {
     width: 100%;
 }
 
-.docs-web-components blue-sidebar:not([closed]) .blue-menu-item-label {
+.blue-wc-web-components blue-sidebar:not([closed]) .blue-menu-item-label {
     display: flex;
 }
 
 /* Make sidebar overlay over content on smaller screens */
 @media (max-width: 992px) {
-    .docs-web-components blue-sidebar {
+    .blue-wc-web-components blue-sidebar {
         position: absolute !important;
         top: 0;
         bottom: 0;
     }
 
-    .docs-web-components blue-sidebar:not([closed]) {
+    .blue-wc-web-components blue-sidebar:not([closed]) {
         box-shadow: 1rem 0.5rem 1rem rgba(0, 0, 0, 0.267);
     }
 
-    .docs-web-components blue-sidebar + * {
+    .blue-wc-web-components blue-sidebar + * {
         margin-left: var(--blue-sidebar-width-closed);
     }
 }
 
-.docs-web-components blue-sidebar {
+.blue-wc-web-components blue-sidebar {
     flex-shrink: 0;
     position: relative;
     z-index: 1;
