#106 Test using CSS vars

--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -1,5 +1,5 @@
 // @import "./theme";
-$theme: rgb(38, 31, 49);
+$theme: red;
 $primary: rgb(140, 130, 172);
 $sidebar-indicator-color: $primary;
 @import "../../dist/style.scss";
