--- a/public/css-variables.css
+++ b/public/css-variables.css
@@ -1,16 +1,20 @@
 @charset "UTF-8";
 /*!
- * Blue React v8.5.0-beta1 (https://bruegmann.github.io/blue-react)
+ * Blue React v8.6.1-beta1 (https://bruegmann.github.io/blue-react)
  * Licensed under GNU General Public License v3.0 (https://github.com/bruegmann/blue-react/blob/master/LICENSE).
 */
 :root {
-  --theme: #261f31;
   --blue-sidebar-width: 16.563rem;
   --blue-sidebar-color-h: 0;
   --blue-sidebar-color-s: 100%;
   --blue-sidebar-color-l: 100%;
   --blue-sidebar-color: white;
-  --blue-theme: #261f31; }
+  --blue-theme: var(--theme, #261f31);
+  --blue-shimmering: 0.8;
+  --blue-app-bg: var(--blue-theme, #261f31);
+  --blue-sidebar-bg: var(--blue-theme, #261f31);
+  --blue-header-bg: var(--blue-theme, #261f31);
+  --action-link-bg-color: var(--blue-theme); }
 
 /*!
  * Bootstrap v5.2.0 (https://getbootstrap.com/)
@@ -477,6 +481,7 @@
   --bs-btn-border-width: 1px;
   --bs-btn-border-color: transparent;
   --bs-btn-border-radius: 0.5rem;
+  --bs-btn-hover-border-color: transparent;
   --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
   --bs-btn-disabled-opacity: 0.65;
   --bs-btn-focus-box-shadow: 0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), .5); }
@@ -860,6 +865,7 @@
   --bs-btn-border-radius: 0.3rem; }
 
 .dropdown-menu {
+  --bs-dropdown-zindex: 1000;
   --bs-dropdown-min-width: 10rem;
   --bs-dropdown-padding-x: 0;
   --bs-dropdown-padding-y: 0.5rem;
@@ -1018,7 +1024,7 @@
   --bs-card-group-margin: 0.75rem; }
 
 .accordion {
-  --bs-accordion-color: #000;
+  --bs-accordion-color: #212529;
   --bs-accordion-bg: #fff;
   --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
   --bs-accordion-border-color: var(--bs-border-color);
@@ -1027,9 +1033,9 @@
   --bs-accordion-inner-border-radius: calc(0.5rem - 1px);
   --bs-accordion-btn-padding-x: 1.25rem;
   --bs-accordion-btn-padding-y: 1rem;
-  --bs-accordion-btn-color: var(--bs-body-color);
+  --bs-accordion-btn-color: #212529;
   --bs-accordion-btn-bg: var(--bs-accordion-bg);
-  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var%28--bs-body-color%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   --bs-accordion-btn-icon-width: 1.25rem;
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
@@ -1188,6 +1194,7 @@
   --bs-list-group-active-border-color: #8c82ac; }
 
 .toast {
+  --bs-toast-zindex: 1090;
   --bs-toast-padding-x: 0.75rem;
   --bs-toast-padding-y: 0.5rem;
   --bs-toast-spacing: 1.5rem;
@@ -1202,6 +1209,9 @@
   --bs-toast-header-color: #6c757d;
   --bs-toast-header-bg: rgba(255, 255, 255, 0.85);
   --bs-toast-header-border-color: rgba(0, 0, 0, 0.05); }
+
+.toast-container {
+  --bs-toast-zindex: 1090; }
 
 .modal {
   --bs-modal-zindex: 1055;
@@ -1282,7 +1292,7 @@
   --bs-popover-header-padding-x: 1rem;
   --bs-popover-header-padding-y: 0.5rem;
   --bs-popover-header-font-size: 1rem;
-  --bs-popover-header-color: var(--bs-heading-color);
+  --bs-popover-header-color: ;
   --bs-popover-header-bg: #f0f0f0;
   --bs-popover-body-padding-x: 1rem;
   --bs-popover-body-padding-y: 1rem;
@@ -1342,6 +1352,7 @@
     --bs-spinner-animation-speed: 1.5s; } }
 
 .offcanvas-sm, .offcanvas-md, .offcanvas-lg, .offcanvas-xl, .offcanvas-xxl, .offcanvas {
+  --bs-offcanvas-zindex: 1045;
   --bs-offcanvas-width: 400px;
   --bs-offcanvas-height: 30vh;
   --bs-offcanvas-padding-x: 1rem;
@@ -1569,12 +1580,6 @@
 .bg-opacity-100 {
   --bs-bg-opacity: 1; }
 
-:root {
-  --app-bg: #261f31;
-  --sidebar-bg: #261f31;
-  --header-bg: #261f31;
-  --action-link-bg-color: var(--theme); }
-
 /* Versteckt Clear-Button für input[type="search"], da Blue bereits selbst Clear-Buttons liefert */
 
 .router-page {
@@ -1582,6 +1587,9 @@
   .blue-layout.open {
     --blue-sidebar-width: 16.563rem;
     /* search */ }
+
+.blue-page {
+  --bs-bg-opacity: 1; }
 
 :root {
   --blue-sidebar-width: 3rem; }
@@ -1596,50 +1604,50 @@
     /* search */ } }
 
 .blue-sidebar .blue-menu-item-dropdown {
-  --sidebar-bg: #1c1725; }
+  --blue-sidebar-bg: #1c1725; }
   .blue-sidebar .blue-menu-item-dropdown .blue-menu-item-dropdown {
-    --sidebar-bg: #130f18; }
+    --blue-sidebar-bg: #130f18; }
     .blue-sidebar .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown {
-      --sidebar-bg: #09070c; }
+      --blue-sidebar-bg: #09070c; }
       .blue-sidebar .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown {
-        --sidebar-bg: black; }
+        --blue-sidebar-bg: black; }
         .blue-sidebar .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown {
-          --sidebar-bg: black; }
+          --blue-sidebar-bg: black; }
           .blue-sidebar .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown {
-            --sidebar-bg: black; }
+            --blue-sidebar-bg: black; }
 
 .blue-header .blue-menu-item-dropdown {
-  --sidebar-bg: #1c1725; }
+  --blue-sidebar-bg: #1c1725; }
   .blue-header .blue-menu-item-dropdown .blue-menu-item-dropdown {
-    --sidebar-bg: #130f18; }
+    --blue-sidebar-bg: #130f18; }
     .blue-header .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown {
-      --sidebar-bg: #09070c; }
+      --blue-sidebar-bg: #09070c; }
       .blue-header .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown {
-        --sidebar-bg: black; }
+        --blue-sidebar-bg: black; }
         .blue-header .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown {
-          --sidebar-bg: black; }
+          --blue-sidebar-bg: black; }
           .blue-header .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown .blue-menu-item-dropdown {
-            --sidebar-bg: black; }
+            --blue-sidebar-bg: black; }
   @media screen and (max-width: 1px) {
     .blue-actions.none.open {
       --action-link-bg-color: black; }
       .blue-actions.none.open .blue-actions-menu .blue-menu-item-dropdown {
-        --sidebar-bg: black; } }
+        --blue-sidebar-bg: black; } }
   @media screen and (max-width: 769px) {
     .blue-actions.sm.open {
       --action-link-bg-color: black; }
       .blue-actions.sm.open .blue-actions-menu .blue-menu-item-dropdown {
-        --sidebar-bg: black; } }
+        --blue-sidebar-bg: black; } }
   @media screen and (max-width: 993px) {
     .blue-actions.md.open {
       --action-link-bg-color: black; }
       .blue-actions.md.open .blue-actions-menu .blue-menu-item-dropdown {
-        --sidebar-bg: black; } }
+        --blue-sidebar-bg: black; } }
   @media screen and (max-width: 1201px) {
     .blue-actions.lg.open {
       --action-link-bg-color: black; }
       .blue-actions.lg.open .blue-actions-menu .blue-menu-item-dropdown {
-        --sidebar-bg: black; } }
+        --blue-sidebar-bg: black; } }
 
 /* Rounded sliders */
 
