--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -1,4 +1,6 @@
-$primary: rgb(38, 31, 49);
+$primary: #261f31;
+$link-color: #3200e5;
+$link-color-dark: #836cd8;
 
 @import "../../dist/style.scss";
 
