--- a/src/docs/web-components.scss
+++ b/src/docs/web-components.scss
@@ -1,7 +1,7 @@
 .blue-wc-web-components {
     // Collides with Blue React's --blue-sidebar-width, that's why we need to reset it here to
     // Web Component's default value
-    --blue-sidebar-width: 16.563rem;
+    // --blue-sidebar-width: 16.563rem;
 
     --blue-sidebar-bg: var(--blue-theme, #007bff);
     --blue-sidebar-button-bg: transparent;
