--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -129,6 +129,8 @@ pre {
 
     .blue-page {
         padding-top: 3.5rem;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
     }
 }
 
