--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -109,14 +109,6 @@ pre {
 }
 
 .docs-layout {
-    .blue-sidebar-toggler {
-        top: 3.5rem;
-    }
-
-    .blue-sidebar {
-        top: 3.5rem + $normal-size;
-    }
-
     .router-page {
         all: unset;
     }
@@ -132,27 +124,4 @@ body:has(.docs-layout) {
     overflow: initial;
 }
 
-.docs-nav {
-    --bs-bg-opacity: 0.9;
-    backdrop-filter: blur(3px) saturate(125%);
-
-    .nav-link {
-        position: relative;
-    }
-
-    .nav-link.active::after {
-        content: "•";
-        opacity: 0.5;
-        position: absolute;
-        bottom: -0.5rem;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-}
-
-@media (min-width: 992px) {
-    .docs-nav {
-        left: 50%;
-        transform: translateX(-50%);
-    }
-}
+@import "./docs-nav";
