Upgrade Blue React & Added font

--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -1,9 +1,11 @@
-$theme: #23272f;
-$primary: #087ea4;
+// $theme: #23272f;
+// $primary: #087ea4;
 
-$body-bg: #efeeee;
-$body-bg-dark: lighten($theme, 4%);
-$body-color-dark: white;
+// $body-bg: #efeeee;
+// $body-bg-dark: lighten($theme, 4%);
+// $body-color-dark: white;
+
+$primary: #087ea4;
 
 @import "node_modules/blue-web/dist/style";
 
