--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -123,3 +123,29 @@ body:has(.docs-layout) {
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
+
+.docs-badge::after {
+    border: 1px solid currentColor;
+    border-radius: var(--bs-border-radius);
+    padding: 0 0.35em;
+    margin-left: 0.25rem;
+    font-size: 0.875em;
+}
+
+.docs-badge-new::after {
+    content: "New";
+    color: var(--bs-primary-text-emphasis);
+    background-color: var(--bs-primary-bg-subtle);
+}
+
+.docs-badge-update::after {
+    content: "Update";
+    color: var(--bs-success-text-emphasis);
+    background-color: var(--bs-success-bg-subtle);
+}
+
+.docs-badge-experimental::after {
+    content: "Experimental";
+    color: var(--bs-warning-text-emphasis);
+    background-color: var(--bs-warning-bg-subtle);
+}
