--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -124,7 +124,7 @@ body:has(.docs-layout) {
     scrollbar-width: none;
 }
 
-.docs-badge::after {
+.docs-badge {
     border: 1px solid currentColor;
     border-radius: var(--bs-border-radius);
     padding: 0 0.35em;
@@ -132,20 +132,26 @@ body:has(.docs-layout) {
     font-size: 0.875em;
 }
 
-.docs-badge-new::after {
-    content: "New";
+.docs-badge-new {
     color: var(--bs-primary-text-emphasis);
     background-color: var(--bs-primary-bg-subtle);
+    &::before {
+        content: "New";
+    }
 }
 
-.docs-badge-update::after {
-    content: "Update";
+.docs-badge-update {
     color: var(--bs-success-text-emphasis);
     background-color: var(--bs-success-bg-subtle);
+    &::before {
+        content: "Update";
+    }
 }
 
-.docs-badge-experimental::after {
-    content: "Experimental";
+.docs-badge-experimental {
     color: var(--bs-warning-text-emphasis);
     background-color: var(--bs-warning-bg-subtle);
+    &::before {
+        content: "Experimental";
+    }
 }
